YAML/pub_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: publisher-svc
  name: publisher-svc
  namespace: default
spec:
  ports:
  - name: discovery-unicast
    port: 7660
    protocol: UDP
    targetPort: 7660
  - name: user-unicast
    port: 7661
    protocol: UDP
    targetPort: 7661
  selector:
    app: pub_svc
  type: ClusterIP
